# deepskyfits

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  DSL.Doxyfile  DeepSkyFitsLogo.afdesign  LICENSE.md  README.md  libinfo.md
include/DSTfits/: DSF_version.h  FITSdata.h  FITSexception.h  FITShdu.h  FITSimg.h  FITSmanager.h  FITSstatistic.h  FITStable.h  FITSwcs.h
modules/: DSF_version.cxx.in  GetGitRevisionDescription.cmake  gTest_version.h.in
src/: FITSexception.cxx  FITShdu.cxx  FITSimg.cxx  FITSmanager.cxx  FITSstatistic.cxx  FITStable.cxx  FITSwcs.cxx
test/: gTest_FitsImage.cxx  gTest_exception.cxx  gTest_form.cxx  gTest_hdu.cxx  gTest_imageProcessing.cxx  gTest_manager.cxx  gTest_statistic.cxx  gTest_stringTable.cxx  gTest_table.cxx  gTest_tableHandling.cxx  gTest_version.cxx  gTest_wcs.cxx
